--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,16 +8,6 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <EditText
         android:id="@+id/Num1"
         android:layout_width="100dp"
@@ -25,10 +15,10 @@
         android:layout_marginStart="75dp"
         android:layout_marginTop="40dp"
         android:ems="10"
+        android:gravity="center"
         android:inputType="numberSigned"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:gravity="center" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/Num2"
@@ -36,12 +26,12 @@
         android:layout_height="40dp"
         android:layout_marginEnd="75dp"
         android:ems="10"
+        android:gravity="center"
         android:inputType="numberSigned"
         app:layout_constraintBottom_toBottomOf="@+id/Num1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/Num1"
-        app:layout_constraintVertical_bias="1.0"
-        android:gravity="center" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/btnPlus"
@@ -92,13 +82,14 @@
         app:layout_constraintTop_toBottomOf="@+id/Num2" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tvResult"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
         android:textSize="24sp"
-        tools:layout_editor_absoluteX="157dp"
-        tools:layout_editor_absoluteY="333dp" />
-
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnPlus" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
